k8s/user-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: commondev73/user-microservice-nest:latest
