k8s/gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: commondev73/api-gateway-nest:dev
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: api-gateway
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: gateway
  type: ClusterIP
